# ersultan-diplom

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py
rental/: admin.py  forms.py  models.py  urls.py  views.py
rental/migrations/: 0001_initial.py  0002_car_fuel_type_car_transmission.py
src/: settings.py  urls.py
templates/: active_rentals.html  base.html  car_list.html  car_rental.html  contact.html  home.html  payment_history.html  register.html  rental_history.html
